--- a/document_stores/mongodb-documentstore/pyproject.toml
+++ b/document_stores/mongodb-documentstore/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "mongodb-documentstore"
+name = "haystack-mongodb-documentstore"
 description = ''
 readme = "README.md"
 requires-python = ">=3.7"
