--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,39 +2,16 @@ fail_fast: true
 
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v4.2.0
+  rev: v4.3.0
   hooks:
     - id: check-ast   # checks Python syntax
     - id: check-json  # checks JSON syntax
     - id: check-yaml  # checks YAML syntax
     - id: check-toml  # checks TOML syntax
-    #- id: end-of-file-fixer  # checks there is a newline at the end of the file  # FIXME: pydoc-markdown conflicts with this
-    #- id: trailing-whitespace  # trims trailing whitespace                       # FIXME: pydoc-markdown conflicts with this
+    - id: end-of-file-fixer  # checks there is a newline at the end of the file
+    - id: trailing-whitespace  # trims trailing whitespace
     - id: check-merge-conflict  # checks for no merge conflict strings
     - id: check-shebang-scripts-are-executable  # checks all shell scripts have executable permissions
     - id: mixed-line-ending  # normalizes line endings
     - id: no-commit-to-branch  # prevents committing to main
     #- id: pretty-format-json  # indents and sorts JSON files    # FIXME: JSON schema generator conflicts with this
-
-- repo: https://github.com/psf/black
-  rev: 22.6.0  # IMPORTANT: keep this aligned with the black version in pyproject.toml
-  hooks:
-  - id: black-jupyter
-
-- repo: https://github.com/pre-commit/mirrors-mypy
-  rev: ''
-  hooks:
-  - id: mypy
-
-- repo: local
-  hooks:
-    - id: pylint
-      name: pylint
-      entry: pylint
-      language: system
-      types: [python]
-      args:
-        [
-          "-rn", # Only display messages
-          "-sn", # Don't display the score
-        ]
