--- a/.github/workflows/test--text2speech_nodes.yml
+++ b/.github/workflows/test--text2speech_nodes.yml
@@ -16,9 +16,7 @@ jobs:
   mypy:
     runs-on: ubuntu-latest
     steps:
-
-    - name: Checkout
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v2
 
     - name: Setup Python
       uses: ./.github/actions/python_cache/
@@ -42,9 +40,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-
-    - name: Checkout
-      uses: actions/checkout@v2
 
     - name: Setup Python
       uses: ./.github/actions/python_cache/
@@ -94,6 +89,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]  # windows-latest --> No audio deps available for Windows.
+    runs-on: ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v2
