Rename integration tests

--- a/.github/workflows/test--text2speech_nodes.yml
+++ b/.github/workflows/test--text2speech_nodes.yml
@@ -82,6 +82,7 @@ jobs:
       #   if: failure() && github.repository_owner == 'deepset-ai' && github.ref == 'refs/heads/main'
 
   integration-tests:
+    name: Integration / ${{ matrix.os }}
     needs:
       - unit-tests
     timeout-minutes: 60
