--- a/.github/workflows/test--text2speech-nodes.yml
+++ b/.github/workflows/test--text2speech-nodes.yml
@@ -73,7 +73,7 @@ jobs:
         run: pip install .[dev]
 
       - name: Run
-        run: pytest ${{ env.PYTEST_PARAMS }} -m "unit"
+        run: pytest ${{ env.PYTEST_PARAMS }} -m "unit" ${{ env.PACKAGE }}
 
       # - uses: act10ns/slack@v1
       #   with:
@@ -110,10 +110,51 @@ jobs:
       env:
         TOKENIZERS_PARALLELISM: 'false'  # Avoid logspam by tokenizers
       run: |
-        pytest ${{ env.PYTEST_PARAMS }} -m "integration"
+        pytest ${{ env.PYTEST_PARAMS }} -m "integration" ${{ env.PACKAGE }}
 
     # - uses: act10ns/slack@v1
     #   with:
     #     status: ${{ job.status }}
     #     channel: '#haystack'
     #   if: failure() && github.repository_owner == 'deepset-ai' && github.ref == 'refs/heads/main'
+
+
+  yaml-schema:
+    runs-on: ubuntu-latest
+    steps:
+
+      - uses: actions/checkout@v2
+
+      - name: Setup Python
+        uses: ./.github/actions/python_cache/
+
+      - name: Install sndfile
+        run: sudo apt update && sudo apt-get install libsndfile1 ffmpeg
+
+      - name: Install package
+        run: pip install -U ${{ env.PACKAGE }}[dev]
+
+      - name: Update pipeline YAML schemas
+        run: python .github/utils/generate_json_schema.py -o ${{ env.PACKAGE }}/json-schemas -v 0.0.1 -t "text2speech nodes schema" -d "schema for text2speech nodes" -p text2speech-nodes -m text2speech_nodes
+
+      - name: Check status
+        run: |
+          if [[ `git status --porcelain` ]]; then
+            git status
+            echo "##################################################################################################"
+            git diff
+            echo "##################################################################################################"
+            echo "# "
+            echo "# CHECK FAILED! The YAML schemas for this package were not updated."
+            echo "# "
+            echo "# Please generate the new schemas locally:"
+            echo "# "
+            echo "#     python .github/utils/generate_json_schema.py -o ${{ env.PACKAGE }}/json-schemas -v 0.0.1 -t "text2speech nodes schema" -d "schema for text2speech nodes" -p text2speech-nodes -m text2speech_nodes"
+            echo "# "
+            echo "# Or see https://github.com/deepset-ai/haystack/blob/main/CONTRIBUTING.md for help."
+            echo "# "
+            echo "# If you have further problems, please open an issue: https://github.com/deepset-ai/haystack-extras/issues"
+            echo "# "
+            echo "##################################################################################################"
+            exit 1
+          fi
