--- a/.github/workflows/test--text2speech-nodes.yml
+++ b/.github/workflows/test--text2speech-nodes.yml
@@ -20,6 +20,7 @@ jobs:
 
     - name: Setup Python
       uses: ./.github/actions/python_cache/
+      package: ${{ env.PACKAGE }}
 
     - name: Install dependencies
       run: pip install ${{ env.PACKAGE }}[dev]
@@ -43,6 +44,7 @@ jobs:
 
     - name: Setup Python
       uses: ./.github/actions/python_cache/
+      package: ${{ env.PACKAGE }}
 
     - name: Pylint
       run: pylint -ry -j 0 ${{ env.PACKAGE }}
@@ -68,9 +70,10 @@ jobs:
 
       - name: Setup Python
         uses: ./.github/actions/python_cache/
+        package: ${{ env.PACKAGE }}
 
       - name: Install Haystack
-        run: pip install .[dev]
+        run: pip install ${{ env.PACKAGE }}[dev]
 
       - name: Run
         run: pytest ${{ env.PYTEST_PARAMS }} -m "unit" ${{ env.PACKAGE }}
@@ -97,6 +100,7 @@ jobs:
 
     - name: Setup Python
       uses: ./.github/actions/python_cache/
+      package: ${{ env.PACKAGE }}
 
     - name: Install audio libraries
       run: |
@@ -104,7 +108,7 @@ jobs:
         sudo apt-get install libsndfile1 ffmpeg
 
     - name: Install Haystack
-      run: pip install .[dev]
+      run: pip install ${{ env.PACKAGE }}[dev]
 
     - name: Run tests
       env:
@@ -127,6 +131,7 @@ jobs:
 
       - name: Setup Python
         uses: ./.github/actions/python_cache/
+        package: ${{ env.PACKAGE }}
 
       - name: Install sndfile
         run: sudo apt update && sudo apt-get install libsndfile1 ffmpeg
