--- a/.github/actions/python_cache/action.yml
+++ b/.github/actions/python_cache/action.yml
@@ -53,4 +53,4 @@ runs:
     shell: bash
     run: |
       python -m pip install --upgrade pip
-      pip install ${{ env.package }}[dev]
+      pip install ${{ inputs.package }}[dev]
