--- a/.github/workflows/test--text2speech-nodes.yml
+++ b/.github/workflows/test--text2speech-nodes.yml
@@ -20,7 +20,8 @@ jobs:
 
     - name: Setup Python
       uses: ./.github/actions/python_cache/
-      package: ${{ env.PACKAGE }}
+      with:
+        package: ${{ env.PACKAGE }}
 
     - name: Install dependencies
       run: pip install ${{ env.PACKAGE }}[dev]
@@ -44,7 +45,8 @@ jobs:
 
     - name: Setup Python
       uses: ./.github/actions/python_cache/
-      package: ${{ env.PACKAGE }}
+      with:
+        package: ${{ env.PACKAGE }}
 
     - name: Pylint
       run: pylint -ry -j 0 ${{ env.PACKAGE }}
@@ -70,7 +72,8 @@ jobs:
 
       - name: Setup Python
         uses: ./.github/actions/python_cache/
-        package: ${{ env.PACKAGE }}
+        with:
+          package: ${{ env.PACKAGE }}
 
       - name: Install Haystack
         run: pip install ${{ env.PACKAGE }}[dev]
@@ -100,7 +103,8 @@ jobs:
 
     - name: Setup Python
       uses: ./.github/actions/python_cache/
-      package: ${{ env.PACKAGE }}
+      with:
+        package: ${{ env.PACKAGE }}
 
     - name: Install audio libraries
       run: |
@@ -131,7 +135,8 @@ jobs:
 
       - name: Setup Python
         uses: ./.github/actions/python_cache/
-        package: ${{ env.PACKAGE }}
+        with:
+          package: ${{ env.PACKAGE }}
 
       - name: Install sndfile
         run: sudo apt update && sudo apt-get install libsndfile1 ffmpeg
