--- a/nodes/text2speech-nodes/.pre-commit-config.yaml
+++ b/nodes/text2speech-nodes/.pre-commit-config.yaml
@@ -35,7 +35,7 @@ repos:
   hooks:
     - id: yaml-schema
       name: YAML Schema
-      entry: .github/utils/generate_json_schema.py -f text2speech-nodes -m text2speech_nodes
+      entry: .github/utils/generate_json_schema.py --folder-name text2speech-nodes --module text2speech_nodes
       language: script
       types: [bash]
       always_run: true
