specify dep groups

--- a/nodes/speech2text/pyproject.toml
+++ b/nodes/speech2text/pyproject.toml
@@ -31,13 +31,25 @@ dependencies = [
   "numpy",
   "torch",
   "pydantic",
-  "torchaudio",
-  "librosa",
-  "pydub"
+  #"torchaudio",
 ]
+
 dynamic = ["version"]
 
 [project.optional-dependencies]
+whisper = [
+  "whisper@git+https://github.com/openai/whisper.git"
+]
+wav2vec = [
+  "transformers",
+  "librosa",
+  "pydub",
+  "tqdm"
+]
+aeneas = [
+  "aeneas"
+]
+
 dev = [
   "pre-commit",
   "mypy",
@@ -68,6 +80,9 @@ dependencies = [
 [tool.hatch.envs.default.scripts]
 cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=speech2text --cov=tests"
 no-cov = "cov --no-cov"
+
+[tool.hatch.metadata]
+allow-direct-references = true
 
 [[tool.hatch.envs.test.matrix]]
 python = ["37", "38", "39", "310", "311"]
