--- a/.github/workflows/test__speech2text.yml
+++ b/.github/workflows/test__speech2text.yml
@@ -147,7 +147,7 @@ jobs:
         run: sudo apt update && sudo apt-get install libsndfile1 ffmpeg
 
       - name: Install package
-        run: pip install -U ${{ env.PACKAGE }}[dev]
+        run: pip install -U ${{ env.PACKAGE }}[whisper,wav2vec,aeneas,dev]
 
       - name: Update pipeline YAML schemas
         run: python .github/utils/generate_json_schema.py -f speech2text -m=speech2text.transcriber,speech2text.aligner
