--- a/.github/workflows/test__speech2text.yml
+++ b/.github/workflows/test__speech2text.yml
@@ -16,102 +16,6 @@ env:
 
 jobs:
 
-  mypy:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Setup Python
-      uses: ./.github/actions/python_cache/
-      with:
-        package: ${{ env.PACKAGE }}
-
-    - name: Install dependencies
-      run: pip install ${{ env.PACKAGE }}[dev]
-
-    - name: Mypy
-      # NOTE: https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-library-stubs-or-py-typed-marker
-      # FIXME --install-types does not work properly yet, see https://github.com/python/mypy/issues/10600
-      # We should see if there's a better way than --ignore-missing-imports
-      run: mypy ${{ env.PACKAGE }} --ignore-missing-imports
-
-  pylint:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Setup Python
-      uses: ./.github/actions/python_cache/
-      with:
-        package: ${{ env.PACKAGE }}
-
-    - name: Pylint
-      run: |
-        cd ${{ env.PACKAGE }}
-        pylint -ry -j 0 speech2text/
-
-  unit-tests:
-    name: Unit / ${{ matrix.os }}
-    needs:
-      - mypy
-      - pylint
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, macos-latest]  # windows-latest --> No audio deps available for Windows.
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Setup Python
-        uses: ./.github/actions/python_cache/
-        with:
-          package: ${{ env.PACKAGE }}
-
-      - name: Install audio libraries
-        run: |
-          sudo apt-get update
-          sudo apt-get install libsndfile1 ffmpeg
-
-      - name: Install Haystack
-        run: pip install ${{ env.PACKAGE }}[dev]
-
-      - name: Run
-        run: pytest ${{ env.PYTEST_PARAMS }} -m "unit" ${{ env.PACKAGE }}
-
-  integration-tests:
-    name: Integration / ${{ matrix.os }}
-    needs:
-      - unit-tests
-    timeout-minutes: 60
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, macos-latest]  # windows-latest --> No audio deps available for Windows.
-    runs-on: ${{ matrix.os }}
-
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Setup Python
-      uses: ./.github/actions/python_cache/
-      with:
-        package: ${{ env.PACKAGE }}
-
-    - name: Install audio libraries
-      run: |
-        sudo apt-get update
-        sudo apt-get install libsndfile1 ffmpeg
-
-    - name: Install Haystack
-      run: pip install ${{ env.PACKAGE }}[dev]
-
-    - name: Run tests
-      env:
-        TOKENIZERS_PARALLELISM: 'false'  # Avoid logspam by tokenizers
-      run: |
-        pytest ${{ env.PYTEST_PARAMS }} -m "integration" ${{ env.PACKAGE }}
-
   yaml-schema:
     runs-on: ubuntu-latest
     steps:
@@ -155,3 +59,110 @@ jobs:
             echo "##################################################################################################"
             exit 1
           fi
+
+  mypy:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Setup Python
+      uses: ./.github/actions/python_cache/
+      with:
+        package: ${{ env.PACKAGE }}
+
+    - name: Install dependencies
+      run: |
+        pip install ${{ env.PACKAGE }}[dev]
+        pip install git+https://github.com/openai/whisper.git
+
+    - name: Mypy
+      # NOTE: https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-library-stubs-or-py-typed-marker
+      # FIXME --install-types does not work properly yet, see https://github.com/python/mypy/issues/10600
+      # We should see if there's a better way than --ignore-missing-imports
+      run: mypy --install-types --non-interactive ${{ env.PACKAGE }} --exclude=tests/ --exclude=json_schemas/
+
+  pylint:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Setup Python
+      uses: ./.github/actions/python_cache/
+      with:
+        package: ${{ env.PACKAGE }}
+
+    - name: Install dependencies
+      run: |
+        pip install ${{ env.PACKAGE }}[dev]
+        pip install git+https://github.com/openai/whisper.git
+
+    - name: Pylint
+      run: |
+        cd ${{ env.PACKAGE }}
+        pylint -ry -j 0 speech2text/
+
+  unit-tests:
+    name: Unit / ${{ matrix.os }}
+    needs:
+      - mypy
+      - pylint
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, macos-latest]  # windows-latest --> No audio deps available for Windows.
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Setup Python
+        uses: ./.github/actions/python_cache/
+        with:
+          package: ${{ env.PACKAGE }}
+
+      - name: Install audio libraries
+        run: |
+          sudo apt-get update
+          sudo apt-get install libsndfile1 ffmpeg
+
+      - name: Install Haystack
+        run: |
+          pip install ${{ env.PACKAGE }}[dev]
+          pip install git+https://github.com/openai/whisper.git
+
+      - name: Run
+        run: pytest ${{ env.PYTEST_PARAMS }} -m "unit" ${{ env.PACKAGE }}
+
+  integration-tests:
+    name: Integration / ${{ matrix.os }}
+    needs:
+      - unit-tests
+    timeout-minutes: 60
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, macos-latest]  # windows-latest --> No audio deps available for Windows.
+    runs-on: ${{ matrix.os }}
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Setup Python
+      uses: ./.github/actions/python_cache/
+      with:
+        package: ${{ env.PACKAGE }}
+
+    - name: Install audio libraries
+      run: |
+        sudo apt-get update
+        sudo apt-get install libsndfile1 ffmpeg
+
+    - name: Install Haystack
+      run: |
+        pip install ${{ env.PACKAGE }}[dev]
+        pip install git+https://github.com/openai/whisper.git
+
+    - name: Run tests
+      env:
+        TOKENIZERS_PARALLELISM: 'false'  # Avoid logspam by tokenizers
+      run: |
+        pytest ${{ env.PYTEST_PARAMS }} -m "integration" ${{ env.PACKAGE }}
