don't fail for no tests

--- a/nodes/text2speech/pyproject.toml
+++ b/nodes/text2speech/pyproject.toml
@@ -52,6 +52,7 @@ dev = [
   "pydoc-markdown",
   "mkdocs",
   "jupytercontrib",
+  "pytest-custom_exit_code",  # used in the CI
 ]
 
 [project.urls]
