supress no-test exit code

--- a/.github/workflows/test__text2speech.yml
+++ b/.github/workflows/test__text2speech.yml
@@ -12,7 +12,7 @@ on:
 
 env:
   PACKAGE: nodes/text2speech/
-  PYTEST_PARAMS: --maxfail=5 --durations=10
+  PYTEST_PARAMS: --maxfail=5 --durations=10 --suppress-no-test-exit-code
 
 jobs:
 
