--- a/.github/workflows/test__speech2text.yml
+++ b/.github/workflows/test__speech2text.yml
@@ -12,7 +12,7 @@ on:
 
 env:
   PACKAGE: nodes/speech2text/
-  PYTEST_PARAMS: --maxfail=5 --durations=10
+  PYTEST_PARAMS: --maxfail=5 --durations=10 --suppress-no-test-exit-code
 
 jobs:
 
