--- a/.github/workflows/test__text2speech.yml
+++ b/.github/workflows/test__text2speech.yml
@@ -27,8 +27,16 @@ jobs:
         with:
           package: ${{ env.PACKAGE }}
 
-      - name: Install sndfile
-        run: sudo apt update && sudo apt-get install libsndfile1 ffmpeg
+      - name: Install Linux audio libraries
+        if: matrix.os == "ubuntu-latest"
+        run: |
+          sudo apt-get update
+          sudo apt-get install libsndfile1 ffmpeg
+
+      - name: Install Mac audio libraries
+        if: matrix.os == "macos-latest"
+        run: |
+          brew install libsndfile ffmpeg
 
       - name: Install package
         run: pip install -U ${{ env.PACKAGE }}[dev]
@@ -68,6 +76,17 @@ jobs:
       with:
         package: ${{ env.PACKAGE }}
 
+    - name: Install Linux audio libraries
+      if: matrix.os == "ubuntu-latest"
+      run: |
+        sudo apt-get update
+        sudo apt-get install libsndfile1 ffmpeg
+
+    - name: Install Mac audio libraries
+      if: matrix.os == "macos-latest"
+      run: |
+        brew install libsndfile ffmpeg
+
     - name: Install dependencies
       run: pip install ${{ env.PACKAGE }}[dev]
 
@@ -86,6 +105,17 @@ jobs:
       uses: ./.github/actions/python_cache/
       with:
         package: ${{ env.PACKAGE }}
+
+    - name: Install Linux audio libraries
+      if: matrix.os == "ubuntu-latest"
+      run: |
+        sudo apt-get update
+        sudo apt-get install libsndfile1 ffmpeg
+
+    - name: Install Mac audio libraries
+      if: matrix.os == "macos-latest"
+      run: |
+        brew install libsndfile ffmpeg
 
     - name: Install dependencies
       run: pip install ${{ env.PACKAGE }}[dev]
@@ -113,8 +143,16 @@ jobs:
         with:
           package: ${{ env.PACKAGE }}
 
-      - name: Install sndfile
-        run: sudo apt update && sudo apt-get install libsndfile1 ffmpeg
+      - name: Install Linux audio libraries
+        if: matrix.os == "ubuntu-latest"
+        run: |
+          sudo apt-get update
+          sudo apt-get install libsndfile1 ffmpeg
+
+      - name: Install Mac audio libraries
+        if: matrix.os == "macos-latest"
+        run: |
+          brew install libsndfile ffmpeg
 
       - name: Install deps
         run: pip install ${{ env.PACKAGE }}[dev]
@@ -142,10 +180,16 @@ jobs:
       with:
         package: ${{ env.PACKAGE }}
 
-    - name: Install audio libraries
+    - name: Install Linux audio libraries
+      if: matrix.os == "ubuntu-latest"
       run: |
         sudo apt-get update
         sudo apt-get install libsndfile1 ffmpeg
+
+    - name: Install Mac audio libraries
+      if: matrix.os == "macos-latest"
+      run: |
+        brew install libsndfile ffmpeg
 
     - name: Install deps
       run: pip install ${{ env.PACKAGE }}[dev]
