--- a/.github/workflows/test__speech2text.yml
+++ b/.github/workflows/test__speech2text.yml
@@ -109,7 +109,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest]  # windows-latest --> No audio deps available for Windows.
+        os: [ubuntu-latest]  # windows-latest --> No audio deps available for Windows.
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -120,16 +120,10 @@ jobs:
         with:
           package: ${{ env.PACKAGE }}
 
-      - name: Install Linux audio libraries
-        if: matrix.os == "ubuntu-latest"
+      - name: Install audio libraries
         run: |
           sudo apt-get update
           sudo apt-get install libsndfile1 ffmpeg
-
-      - name: Install Mac audio libraries
-        if: matrix.os == "macos-latest"
-        run: |
-          brew install libsndfile ffmpeg
 
       - name: Install Haystack
         run: |
@@ -147,7 +141,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest]  # windows-latest --> No audio deps available for Windows.
+        os: [ubuntu-latest]  # windows-latest --> No audio deps available for Windows.
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -159,15 +153,9 @@ jobs:
         package: ${{ env.PACKAGE }}
 
     - name: Install Linux audio libraries
-      if: matrix.os == "ubuntu-latest"
       run: |
         sudo apt-get update
         sudo apt-get install libsndfile1 ffmpeg
-
-    - name: Install Mac audio libraries
-      if: matrix.os == "macos-latest"
-      run: |
-        brew install libsndfile ffmpeg
 
     - name: Install Haystack
       run: |
