--- a/.github/workflows/test__text2speech.yml
+++ b/.github/workflows/test__text2speech.yml
@@ -28,15 +28,9 @@ jobs:
           package: ${{ env.PACKAGE }}
 
       - name: Install Linux audio libraries
-        if: matrix.os == "ubuntu-latest"
         run: |
           sudo apt-get update
           sudo apt-get install libsndfile1 ffmpeg
-
-      - name: Install Mac audio libraries
-        if: matrix.os == "macos-latest"
-        run: |
-          brew install libsndfile ffmpeg
 
       - name: Install package
         run: pip install -U ${{ env.PACKAGE }}[dev]
@@ -133,7 +127,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest]  # windows-latest --> No audio deps available for Windows.
+        os: [ubuntu-latest]  # windows-latest --> No audio deps available for Windows.
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
@@ -144,15 +138,9 @@ jobs:
           package: ${{ env.PACKAGE }}
 
       - name: Install Linux audio libraries
-        if: matrix.os == "ubuntu-latest"
         run: |
           sudo apt-get update
           sudo apt-get install libsndfile1 ffmpeg
-
-      - name: Install Mac audio libraries
-        if: matrix.os == "macos-latest"
-        run: |
-          brew install libsndfile ffmpeg
 
       - name: Install deps
         run: pip install ${{ env.PACKAGE }}[dev]
@@ -169,7 +157,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest]  # windows-latest --> No audio deps available for Windows.
+        os: [ubuntu-latest]  # windows-latest --> No audio deps available for Windows.
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -180,16 +168,11 @@ jobs:
       with:
         package: ${{ env.PACKAGE }}
 
-    - name: Install Linux audio libraries
+    - name: Install audio libraries
       if: matrix.os == "ubuntu-latest"
       run: |
         sudo apt-get update
         sudo apt-get install libsndfile1 ffmpeg
-
-    - name: Install Mac audio libraries
-      if: matrix.os == "macos-latest"
-      run: |
-        brew install libsndfile ffmpeg
 
     - name: Install deps
       run: pip install ${{ env.PACKAGE }}[dev]
