--- a/stores/mongodb-documentstore/pyproject.toml
+++ b/stores/mongodb-documentstore/pyproject.toml
@@ -29,13 +29,18 @@ dependencies = [
 ]
 dynamic = ["version"]
 
+[project.optional-dependencies]
+dev = [
+  "farm-haystack[dev]>1, <2",
+]
+
 [project.urls]
 Documentation = "https://github.com/unknown/mongodb-documentstore#readme"
 Issues = "https://github.com/unknown/mongodb-documentstore/issues"
 Source = "https://github.com/unknown/mongodb-documentstore"
 
 [tool.hatch.version]
-path = "src/mongodb_documentstore/__about__.py"
+path = "mongodb_documentstore/__about__.py"
 
 [tool.hatch.envs.default]
 dependencies = [
@@ -43,7 +48,7 @@ dependencies = [
   "pytest-cov",
 ]
 [tool.hatch.envs.default.scripts]
-cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/mongodb_documentstore --cov=tests"
+cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=mongodb_documentstore --cov=tests"
 no-cov = "cov --no-cov"
 
 [[tool.hatch.envs.test.matrix]]
@@ -53,7 +58,7 @@ python = ["37", "38", "39", "310", "311"]
 branch = true
 parallel = true
 omit = [
-  "src/mongodb_documentstore/__about__.py",
+  "mongodb_documentstore/__about__.py",
 ]
 
 [tool.coverage.report]
