--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,19 +23,10 @@ repos:
   rev: 22.8.0  # IMPORTANT: keep this aligned with the black version in pyproject.toml
   hooks:
   - id: black-jupyter
-    files: nodes/speech2text/
+    files: nodes/text2speech/
 
 - repo: https://github.com/pre-commit/mirrors-mypy
   rev: 'v0.971'
   hooks:
   - id: mypy
-    files: nodes/speech2text/
-
-- repo: local
-  hooks:
-    - id: yaml-schema
-      name: YAML Schema
-      entry: .github/utils/generate_json_schema.py --folder-name speech2text --module speech2text
-      language: script
-      types: [bash]
-      always_run: true
+    files: nodes/text2speech/
